--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,12 @@
 name: Build WF
 on:
-  push:
+  # push:
+  #   branches: 
+  #     - main
+  pull_request: 
     branches: 
       - main
+
 jobs:
   Build:
     runs-on: ubuntu-latest
