--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,28 @@ jobs:
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
 
+  Security_Scan:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Run Trivy File System Scan 
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          scan-type: fs
+          format: 'json'
+          scan-ref: .
+          exit-code: 0
+          vuln-type: 'os,library'
+          output: trivy-results.json
+        
+      - name: Stroring Security Reports table
+        uses: actions/upload-artifact@v4
+        with:
+          name: Trivy Results Storing
+          path: target/*.json
+
