--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,5 +74,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Trivy Results Storing
-          path: target/*.json
+          path: trivy-results.json
 
